--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Agência Arretada - Jogo da Cobrinha</title>
+    <title>Jogo da Cobrinha Nordestina</title>
     <link rel="stylesheet" href="/main.css">
 
 <script>
