--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
 	<h1 id="snake2">Agência Arretada - Jogo da Cobrinha</h1>
 	<p id="info2">Arriégua... Perdeu o jogo.</p>
 	<a href="javascript: void(0)" id="restart" onclick="reset()" >Começar de Novo</a> 	
-	<a href="#" id="tweet" target="_blank" >Tweet My Score</a> 
+	<a href="#" id="tweet" target="_blank" >Tweetar Minha Pontuação</a> 
 </div>
 
 <div id="menu">
