--- a/extra/mobile.html
+++ b/extra/mobile.html
@@ -11,6 +11,9 @@
 
   <link href = "./snake.css" type = "text/css" rel = "stylesheet">
 
+  
+  <audio src="/sons/forro.mp3" autoplay="true" ></audio>
+
 </head>
 <body>
   <div id="root">
@@ -18,22 +21,7 @@
   </div>
 
 
-  <!-- Audio -->
-<audio id="main_music" loop>
-	<source src="/sons/forro.mp3" type="audio/mp3" />
-	<source src="/sons/forro.ogg" type="audio/ogg"/>
-</audio>
-
-<audio id="gameOver">
-	<source src="/sons/grito-cearence.mp3" type="audio/mp3" />
-	<source src="/sons/grito-cearence.ogg" type="audio/ogg"/>
-</audio>
-
-<audio id="food">
-	<source src="/sons/viviano-iei.mp3" type="audio/mp3" />
-	<source src="/sons//viviano-iei.ogg" type="audio/ogg"/>
-</audio>
-
+  
   <script src="./snake.js"></script>
   <script src="/main-2.js"></script>
 </body>
