--- a/extra/mobile.html
+++ b/extra/mobile.html
@@ -12,7 +12,10 @@
   <link href = "./snake.css" type = "text/css" rel = "stylesheet">
 
   
-  <audio src="/sons/forro.mp3" autoplay="true" ></audio>
+  <audio id="main_music" loop>
+    <source src="/sons/forro.mp3" type="audio/mp3" />
+    <source src="/sons/forro.ogg" type="audio/ogg"/>
+  </audio>
 
 </head>
 <body>
